k8s/adminer.yml

# SERVICE
apiVersion: v1
kind: Service
metadata: 
  name: adminer-service
spec:
  selector:
    app: adminer-deployment
  type: NodePort
  ports:
    - protocol: TCP # TCP allows us to use HTTP
      port: 80 # port that the service will listen on
      targetPort: 8080 # port that pods are listening on
      nodePort: 30080 # port on the node that the service will listen on
---

# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  labels:
    app: adminer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer-deployment
  template:
    metadata:
      labels:
        app: adminer-deployment
    spec:
      containers:
        - name: adminer-deployment
          image: adminer
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
