k8s/db.yml
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-deployment
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-deployment
  template:
    metadata:
      labels:
        app: db-deployment
    spec:
      containers:
        - name: db-deployment
          image: postgres:17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: db-volume-claim
