k8s/frontend.yml
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-deployment # how the service knows which pods to route traffic to
  ports:
    - protocol: TCP # TCP allows us to use HTTP
      port: 80 # port that the service will listen on
      targetPort: 80 # port that pods are listening on
---
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: frontend-deployment
          image: swpgruppe16/frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: regcred
